2011-03-05 mmichaud <michael.michaud@free.fr>
    * com.vividsolutions.jump.workbench.ui.renderer.java2DJava2DConverter
      optimisation of LineString drawing (skip segments out of the viewPort)

2011-03-05 mmichaud <michael.michaud@free.fr>
    * added SaveDatasets plugin in the ToolBar (following Peppe's suggestion)

2011-02-22 mmichaud <michael.michaud@free.fr>
    * fixed bug 3178207, com.vividsolutions.jump.workbench.ui.AttributePanel
      delete key does not delete a feature being edited any more

2011-02-23 Matthias Scholz <ms@jammerhund.de>
	* Changes for a better presentation of attribute values. Now Date, Double
	  and Integer attributes will be formatted with the default loacle settings.
	  Changes in:
		* com.vividsolutions.jump.workbench.ui.renderer.style.LabelStyle.paint(Feature f, Graphics2D g, Viewport viewport)
		* com.vividsolutions.jump.workbench.ui.style.LabelStylePanel.sampleText()

2011-02-22 mmichaud <michael.michaud@free.fr>
    * removed unused com.sun.corba.se.impl.protocol.giopmsgheaders.KeyAddr
    * removed unused com.sun.org.apache.xerces.internal.impl.dv.xs.DecimalDV
      in com.vividsolutions.jump.workbench.ui.plugin.clipboard.PasteItemsPlugIn
	* removed a sun proprietary code dependency in 
	  com.vividsolutions.jump.workbench.imagery.graphic.GraphicImage
	  note 1 : the code was supposed to set different rendering hints for gray
	  jpg image and for other jpg image types, but I could not see any effect
	  note 2 : Currently ImageGraphic does interpolation for image rendering
	  while the new Sextante Raster framework does not.

2011-02-16 Matthias Scholz <ms@jammerhund.de>
	* updated german translation for LayerPropertiesPlugIn

2011-02-09 mmichaud <michael.michaud@free.fr> for mrashad
    * org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn
        add layer extent to the information panel

2011-02-12 Matthias Scholz <ms@jammerhund.de>
	* org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn