@@ -1,5 +1,10 @@
+2011-03-06 mmichaud <michael.michaud@free.fr>
+    * com.vividsolutions.jump.workbench.ui.renderer.style.WKTRendererjava2DJava2DConverter
+      com.vividsolutions.jump.workbench.ui.zoom.ZoomBar
+      Bug fix (implements new Java2DConverter.PointConverter interface
+
 2011-03-05 mmichaud <michael.michaud@free.fr>
-    * com.vividsolutions.jump.workbench.ui.renderer.java2DJava2DConverter
+    * com.vividsolutions.jump.workbench.ui.renderer.java2DConverter
       optimisation of LineString drawing (skip segments out of the viewPort)
 
 2011-03-05 mmichaud <michael.michaud@free.fr>
